--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,7 +10,7 @@ env:
 jobs:
 
   check-version:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.retrieve-version.outputs.version }}
     steps:
@@ -25,7 +25,7 @@ jobs:
         run: bash .github/workflows/scripts/get_version.sh
 
   test-ubuntu:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: check-version
     steps:
       - name: Checkout
@@ -77,7 +77,7 @@ jobs:
 
   check-publication:
     environment: Deployment
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: check-version
     steps:
       - name: Checkout
@@ -95,7 +95,7 @@ jobs:
 
   publish:
     environment: Deployment
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs:
       - test-ubuntu
       - test-windows
@@ -117,7 +117,7 @@ jobs:
 
   create-release:
     environment: Deployment
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs:
       - check-version
       - publish
