--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ env:
 jobs:
 
   test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -35,7 +35,7 @@ jobs:
         run: cargo test
 
   check-mutations:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: test
     steps:
       - name: Checkout
@@ -52,7 +52,7 @@ jobs:
         run: bash .github/workflows/scripts/check_mutations.sh
 
   lint-rust:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: test
     steps:
       - name: Checkout
@@ -72,7 +72,7 @@ jobs:
         uses: EmbarkStudios/cargo-deny-action@v1
 
   lint-generic:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: test
     steps:
       - name: Checkout
